--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,11 @@ dependencies:
   flutter:
     sdk: flutter
 
+
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.2.1
+  pinput: ^5.0.2
+
 
 dev_dependencies:
   flutter_test:
