--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   flutter_svg: ^2.2.1
   pinput: ^5.0.2
   http: ^1.5.0
+  google_fonts: ^6.3.1
+  convex_bottom_bar: ^3.2.0
 
 
 dev_dependencies:
@@ -29,10 +31,6 @@ dev_dependencies:
 
 
 flutter:
-
-
   uses-material-design: true
-
-
   assets:
-     - assets/images/
+  - assets/images/
